--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"sourceMap": true,
-		"module": "es2015",
+		"module": "esnext",
 		"moduleResolution": "node",
 		"target": "es5",
 		"strict": true,
