--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack-dev-server --mode=development --hot"
+		"dev": "webpack-dev-server --history-api-fallback --progress --mode=development --hot"
 	},
 	"author": "edward.syasin@gmail.com",
 	"license": "ISC",
