--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"webpack-dev-server": "^4.7.2"
 	},
 	"dependencies": {
+		"axios": "^0.24.0",
 		"vue": "^2.6.14",
 		"vue-class-component": "^7.2.6",
 		"vue-router": "^3.5.3",
