--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack-dev-server --history-api-fallback --progress --mode=development --hot"
+		"dev": "webpack-dev-server --history-api-fallback --progress --mode=development --hot",
+		"build": "webpack --mode=production"
 	},
 	"author": "edward.syasin@gmail.com",
 	"license": "ISC",
@@ -13,6 +14,7 @@
 		"@babel/plugin-proposal-class-properties": "^7.16.5",
 		"@babel/plugin-proposal-decorators": "^7.16.5",
 		"@babel/preset-env": "^7.16.5",
+		"axios-mock-adapter": "^1.20.0",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.5.1",
 		"html-webpack-plugin": "^5.5.0",
@@ -21,11 +23,11 @@
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.4",
+		"vue-class-component": "^7.2.6",
 		"vue-loader": "^15.9.8",
 		"vue-loader-plugin": "^1.3.0",
 		"vue-style-loader": "^4.1.3",
 		"vue-template-compiler": "^2.6.14",
-		"vue-class-component": "^7.2.6",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.7.2"
