--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"axios-mock-adapter": "^1.20.0",
 		"babel-loader": "^8.2.3",
 		"css-loader": "^6.5.1",
+		"dotenv-webpack": "^7.0.3",
 		"html-webpack-plugin": "^5.5.0",
 		"sass": "^1.45.1",
 		"sass-loader": "^12.4.0",
